--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root{
+  --bg-color:#C5232F;
+  --bg-gray:#eee;
+  --bg-white:#fff;
+
+  --text-primary-color:#C5232F;
+  --text-white:#fff;
 }
 
-.App-logo {
-  height: 40vmin;
+body {
+  font-family: "Montserrat", sans-serif;
+  margin:50px 0;
+  padding: 0;
+}
+
+.product-list{
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  gap:20px;
+}
+.product-card{
+  background:var(--bg-white);
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  text-align: center;
+  max-width:300px;
+  flex:1;
+}
+.product-image{
+  width:100%;
+  height:150px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.product-content{
+  padding:20px;
+}
+.product-content h2{
+  font-size:20px;
+  color:var(--text-primary-color);
+  margin-top:0;
+}
+.product-content p{
+  font-size:12px;
+}
+.price-delivery{
+  display:flex;
+  justify-content: space-between;
+}
+.price-delivery .price-section{
+  font-size:12px;
+  font-weight: 600;
+}
+.price-delivery .price-section span{
+  font-size:10px;
+  font-weight: 500;
+  display: block;
+  padding-bottom:5px;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.price-delivery .quantity-control{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  cursor: pointer;
+}
+.quantity-control .quantity-value{
+  padding:0 10px;
+}
+.quantity-control .icons{
+  font-size:7px;
+  background-color:var(--bg-gray);
+  border-radius: 100%;
+  padding:3px;
+}
+.add-to-cart{
+  background-color: var(--bg-color);
+  color:var(--text-white);
+  padding:10px;
+  border:none;
+  border-radius: 5px;
+  cursor: pointer;
+  width:100%;
+  margin:20px 0 0;
+  font-size:12px;
+  text-transform: uppercase;
+}
+.notification{
+  position:fixed;
+  top:10px;
+  left:50%;
+  transform: translateX(-50%);
+  background-color: var(--bg-color);
+  color:var(--text-white);
+  padding:10px 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  z-index:1000;
+  font-size:14px;
+}
+.cart-summary{
+  margin:20px;
+  padding:10px;
+  border:1px solid var(--bg-gray);
+  border-radius: 10px;
+  background-color:var(--bg-white);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width:575px){
+  .product-list{
+    flex-direction: column;
+    justify-content: center;
+    padding:0 20px;
+   }
+   .product-card{
+    max-width:100%;
+   }
 }
